Thu Jan 27 21:21:13 2011  John Haque  <j.eh@mchsi.com>

	* eval.c (r_interpret): When in BEGINFILE or ENDFILE, add check for
	`getline var < file' in cases Op_K_getline_redir and Op_K_getline.

	* awkgram.y (constant_fold): Code cleanups. Fix bug in the code for
	string concatenation.

	* configure.ac: Remove unneed extra call to AC_LANG.

Thu Jan 27 15:00:42 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c: Fix up some comments.
	* io.c (remap_std_file): New function.
	(iop_close): Use it.

Mon Jan 24 22:14:21 2011  Andreas Buening    <andreas.buening@nexgo.de>

	* debug.c: Bracket variables used with readline in #ifdef.
	* dfa.c (add_utf8_anychar): Move inside ifdef.

Mon Jan 24 22:05:26 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* re.c (make_regexp): Add separate variable for dfa syntax.
	General formatting cleanup.
	(research): General formatting cleanup.
	(refree): Remove out of date comment.
	(re_update): Comment the routine.
	(check_bracket_exp): Improve check for range to not get [^-/]
	kinds of things. Thanks to Nelson Beebe for pointing out the bug.

Wed Jan 19 20:31:17 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* awk.h (is_valid_character): Add `& 0XFF' and remove casts to
	unsigned chars in other files. Remove definition of this macro
	in not MBS_SUPPORT case, since it wasn't being used.
	(btowc_cache): New macro to index into the array and use the
	same trick. Relies on ANSI C preprocessor semantics.
	Fix all uses.
	* builtin.c, node.c, io.c: Fix uses of these macros.

Wed Jan 19 20:19:29 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* node.c (wstr2str): New function.
	* awk.h: Declare it.
	* builtin.c (is_wupper, is_wlower, to_wupper, to_wlower,
	wide_change_case, wide_tolower, wide_toupper): New functions to
	simplify wide character case conversions.
	(do_tolower, do_toupper): Use wide_tolower, wide_toupper in multibyte
	case.
	(do_substr): Simplify code a little bit.

Mon Jan 17 22:48:48 2011  Arnold D. Robbins  <arnold@skeeve.com>
