@@ -1,3 +1,7 @@
+Thu Jan 27 22:03:22 2011  John Haque         <j.eh@mchsi.com>
+
+	* xref.awk, profile2.ok: Fixed to be character set independent.
+
 Sun Dec 26 13:54:21 2010  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): Include profile2.ok in the list. Oops.
