@@ -1,3 +1,7 @@
+Thu Jan 27 22:12:00 2011  Corinna Vinschen  <vinschen@redhat.com>
+
+	* Makefile.am: Remove $(EXEEXT) from 'awk' symlink.
+
 Thu Jan 27 21:21:13 2011  John Haque  <j.eh@mchsi.com>
 
 	* eval.c (r_interpret): When in BEGINFILE or ENDFILE, add check for
